--- a/Twitter - Coleta 1.ipynb
+++ b/Twitter - Coleta 1.ipynb
@@ -6,6 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Aula 01 - Oferta 1\n",
+    "#Integrantes:\n",
+    "#Lucas Azarias\n",
+    "#Nathalia Oliveira\n",
+    "#Thiago Alvarenga\n",
+    "\n",
     "from tweepy import OAuthHandler\n",
     "from tweepy import Stream\n",
     "from tweepy.streaming import StreamListener\n",
