--- a/Twitter - Coleta 1.ipynb
+++ b/Twitter - Coleta 1.ipynb
@@ -11,6 +11,7 @@
     "#Lucas Azarias\n",
     "#Nathalia Oliveira\n",
     "#Thiago Alvarenga\n",
+    "#Igor Lassi\n",
     "\n",
     "from tweepy import OAuthHandler\n",
     "from tweepy import Stream\n",
